--- a/static/css/active_dashboard.css
+++ b/static/css/active_dashboard.css
@@ -155,6 +155,26 @@
     font-weight: bold;
 }
 
+#settings-window{
+    display: none;
+    position: fixed;
+    flex-direction: column;
+    z-index: 1;
+    width: 90vw;
+    margin-left: 10vw;
+    height: 100vh;
+    background-color: white;
+    padding: 5px;
+}
+
+#date-range-selectors{
+    display: none;
+}
+
+.settings-action-btns{
+    display: flex;
+}
+
 .main-dashboard{
     display: flex;
     flex-direction: column;
