--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,13 +12,14 @@
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey;
+    border-radius: 5px;
   /*border-radius: 10px;*/
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #6C92DE;
-  border-radius: 2px;
+  background: black;
+  border-radius: 5px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -41,7 +42,7 @@ html, body{
 
 .logo-container{
     width: 100vw;
-    height: 8vh;
+    height: 9vh;
     /*padding-left: 15px;*/
     display: flex;
     justify-content: center;
@@ -50,15 +51,16 @@ html, body{
 }
 
 #main-logo{
-    padding-top: 10px;
-    padding-bottom: 5px;
-    max-width: 130px;
-    max-height: 110px;
+    /*padding-top: 10px;*/
+    /*padding-bottom: 5px;*/
+    /*max-width: 130px;*/
+    /*max-height: 110px;*/
     /*max-width:200px;*/
     /*max-height:95px;*/
-    width: auto;
-    height: auto;
+    width: 100px;
     /*height: auto;*/
+    /*height: auto;*/
+    /*border: red solid 2px;*/
 }
 
 .title-notation{
@@ -66,7 +68,7 @@ html, body{
     color: white;
     font-weight: lighter;
     margin-top: 10px;
-    margin-left: -15px;
+    margin-left: 5px;
     /*align-self: center;*/
     /*text-shadow: #4B4B4B -1px 0 2px;*/
 }
@@ -74,16 +76,16 @@ html, body{
 .navbar{
     display: flex;
     width: 100vw;
-    height: 7vh;
+    height: 6vh;
     background-color: black;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-start;
     color: white;
     box-shadow: #6D6D6D 0 5px 5px;
 }
 
 .navbar-buttons{
-    height: 7vh;
+    height: 6vh;
     font-size: 16px;
     /*border-radius: 5px;*/
     background-color: transparent;
