--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,6 +1,6 @@
 .header{
     /*border: solid 2px red;*/
-    height: fit-content;
+    /*height: fit-content;*/
 }
 
 .navbar{
@@ -13,22 +13,13 @@
 
 
 .logo-container{
-    height: 10vh;
     background-color: #467BDE;
     justify-content: flex-start;
 }
 
 #main-logo{
-    padding-top: 10px;
-    padding-bottom: 5px;
-    margin-left: 15px;
-    max-width: 100px;
-    max-height: 90px;
-    /*max-width:200px;*/
-    /*max-height:95px;*/
-    width: auto;
-    height: auto;
-    /*height: auto;*/
+    width: 80px;
+    margin-left: 10px;
 }
 
 
@@ -39,19 +30,20 @@
 }
 
 .beta-sup{
-    font-size: 12px;
-    font-style: italic;
-    font-weight: bold;
-    color: #ffa351;
+    /*font-size: 12px;*/
+    /*font-style: italic;*/
+    /*font-weight: bold;*/
+    /*color: #ffa351;*/
 }
 
 .content{
     justify-content: center;
     /*align-items: center;*/
     /*border: red solid 2px;*/
-    height: 83vh;
+    height: 85vh;
     /*margin-top: 20px;*/
-    width: 90vw;
+    width: 100vw;
+    background-image: linear-gradient(#e5e5e5, #b4b4b4);
 }
 
 .projects-container{
@@ -62,6 +54,8 @@
     padding-left: 25px;
     padding-bottom: 10px;
     margin-top: 25px;
+    background-color: white;
+    border: none;
     /*border: blue solid 2px;*/
 
 }
@@ -73,8 +67,10 @@
     display: flex;
     flex-direction: column;
     margin-left: 20px;
-    padding: 0 10px 0 10px;
+    padding: 0 15px 10px 15px;
     margin-top: 25px;
+    background-color: white;
+    border: none;
     /*border: orange solid 2px;*/
 }
 
@@ -85,6 +81,7 @@
     overflow-y: scroll;
     margin-bottom: 10px;
     padding-right: 5px;
+    color: black;
     /*border: blue solid 3px;*/
 }
 
@@ -101,9 +98,11 @@
     height: 30px;
     font-size: 14px;
     font-family: Swansea;
-    color: #6D6D6D;
+    color: black;
+    font-weight: bold;
     padding-top: 2px;
     padding-bottom: 2px;
+
 }
 
 #add-record-form input{
@@ -142,6 +141,10 @@
     font-size: 10px;
     margin-left: 5px;
     font-style: italic;
+}
+
+.recent-dashboards-title, .new-record-title{
+    color: black;
 }
 
 .project-thumbnail-form{
