--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,12 +1,17 @@
 .header{
-    height: fit-content;
+    /*height: fit-content;*/
     background-color: black;
-    padding-bottom: 5px;
-    padding-top: 5px;
+    /*padding-bottom: 5px;*/
+    /*padding-top: 5px;*/
 }
 .logo-container{
-    height: fit-content;
+    /*border: solid orange 2px;*/
+    height: 15vh;
     background-color: black;
+}
+
+#main-logo{
+    /*border: solid red 2px;*/
 }
 
 .navbar{
@@ -14,7 +19,7 @@
 }
 
 .content{
-    background-color: #467BDE;
+    background-image: linear-gradient(#467BDE, #30559a);
 }
 
 .logo-text{
@@ -55,6 +60,12 @@
     text-shadow: #203763 -3px 3px 10px;
 }
 
+.footer-text{
+    align-self: flex-end;
+    font-size: 18px;
+    color: white;
+}
+
 .image-bkgnd-graphic{
     display: flex;
     width: 650px;
@@ -75,6 +86,18 @@
     /*box-shadow: #4B4B4B -2px 2px 5px;*/
 }
 
+.login-content-container {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.login-title{
+    color: white;
+}
+
 .login-container{
     align-self: center;
     height: fit-content;
@@ -84,7 +107,7 @@
     display: flex;
     flex-direction: column;
     color: #7a7a7a;
-    padding: 0 30px 20px 30px;
+    padding: 15px 30px 10px 30px;
     background-color: white;
 }
 
